include_HEADERS = \
	libfguid.h

pkginclude_HEADERS = \
	libfguid/definitions.h \
	libfguid/error.h \
	libfguid/extern.h \
	libfguid/features.h \
	libfguid/types.h

EXTRA_DIST = \
	libfguid.h.in \
	libfguid/definitions.h.in \
	libfguid/features.h.in \
	libfguid/types.h.in

DISTCLEANFILES = \
	libfguid.h \
	libfguid/definitions.h \
	libfguid/features.h \
	libfguid/types.h \
	Makefile \
	Makefile.in

