MSVSCPP_FILES = \
	fguid_test_error/fguid_test_error.vcproj \
	fguid_test_get_version/fguid_test_get_version.vcproj \
	fguid_test_identifier/fguid_test_identifier.vcproj \
	fguid_test_identifier_copy_from/fguid_test_identifier_copy_from.vcproj \
	fguid_test_identifier_to_string/fguid_test_identifier_to_string.vcproj \
	libcerror/libcerror.vcproj \
	libcstring/libcstring.vcproj \
	libfguid/libfguid.vcproj \
	libfguid.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

