MSVSCPP_FILES = \
	fguid_test_error/fguid_test_error.vcproj \
	fguid_test_identifier/fguid_test_identifier.vcproj \
	fguid_test_support/fguid_test_support.vcproj \
	libcerror/libcerror.vcproj \
	libfguid/libfguid.vcproj \
	libfguid.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

